FIX: unwanted horizontal scroll for entire page

--- a/common/common.scss
+++ b/common/common.scss
@@ -13,6 +13,7 @@
 #main > div {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 
   .above-site-header-outlet {
     order: -4;
